# Insurance_Verification

./: docker-compose.yml  insurance_verification_with_chatbot.md  package-lock.json  package.json
backend/: Dockerfile  alembic.ini  demo_chatbot_logic.py  env.example  init.sql  main.py  main_simple.py  pyproject.toml  requirements-simple.txt  requirements.txt  simple_server.py  test_api.py  test_chatbot_direct.py  test_redis.py  test_server.py
backend/alembic/: env.py
backend/app/: __init__.py  auth.py  cache.py  config.py  dto.py  main.py  models.py  provider_client.py
backend/app/api/routes/: auth.py  chatbot.py  policies.py  policy_info.py  verification.py
backend/app/core/: config.py  database.py  middleware.py  mock_redis.py  redis_client.py  security.py
backend/app/models/: audit_logs.py  policies.py  providers.py  users.py  verifications.py
backend/app/schemas/: auth.py  chatbot.py  policy.py  verification.py
backend/app/services/: __init__.py  auth_service.py  cache_service.py  chatbot_service.py  policy_service.py  provider_service.py  verification_service.py
backend/tests/: test_api.py  test_chatbot.py  test_verification.py
frontend/: .env  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/ui/: App.tsx  Chatbot.tsx  Modal.tsx  PolicyManagement.tsx  Toast.tsx  VerifyForm.tsx
frontend/src/ui/chat/: ChatMessage.tsx  ChatPanel.tsx  ChatToggle.tsx  index.ts
